--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,7 @@ em {
     color: lightseagreen
 }
 
-button {
+.button {
     align-items: center;
     background-color: #fee6e3;
     border: 2px solid #111;
@@ -139,7 +139,7 @@ button {
     touch-action: manipulation;
 }
 
-button:after {
+.button:after {
     background-color: #111;
     border-radius: 8px;
     content: "";
@@ -156,21 +156,21 @@ button:after {
     margin: auto;
 }
 
-button:hover:after {
+.button:hover:after {
     transform: translate(0, 0);
 }
 
-button:active {
+.button:active {
     background-color: #ffdeda;
     outline: 0;
 }
 
-button:hover {
+.button:hover {
     outline: 0;
 }
 
 @media (min-width: 768px) {
-    button {
+    .button {
         padding: 0 40px;
     }
 }
